
= JavaScript =
* Integrated "SlickNav" (Created by Josh Cope - @computerwolf) for mobile menu support
* Integrated "FitVids" built by Chris Coyier (http://chriscoyier.net/) and Paravel (http://paravelinc.com/)

= Miscellaneous
* Added Contact Form 7 compatibility
* Added BNS Login compatibility to use `dashicons` display
* Added Gravity Forms compatibility (for reCaptcha form)
* Removed `works-in-progress` folder from theme
* Updated `readme.txt` to note the use and license of SlickNav by Josh Cope
* Updated `readme.txt` to note the use and license of FitVids by Chris Coyier and Paravel
* Updated `style.css` description to emphasize the addition of the SlickNav and FitVids libraries
* Updated `screenshot.png` to better reflect latest release
* Updated `hooks-actions.txt` with new additions

/** ------------------------------------------------------------------------- */
== Version 1.2.5 ==
* Released July 2014

= Code =
* Added new method `OpusPrimusNavigation::pagination` for moving between pages of posts
* Added new method `OpusPrimusNavigation::pagination_wrapped` to provide actions hooks before and after the `pagination` method
* Added `antispambot` email protection to author biography email addresses
* Added sanity checks to ensure widgets are active before rendering sidebars
* Added `opus_primus_defaults.php` to replace `$opus_defaults` class
* Added `opus-primus-ignite.php` to reduce clutter in `functions.php`
* Added `opus_image_link_navigation_output` filter hook to provide access to navigation output
* Added `opus_tagline` to default hidden screen options array
* Adjusted the `OpusPrimusStructures::the_loop` and `OpusPrimusStructures::the_loop_archives` to use the `pagination_wrapped` method
* Changed navigation method from `posts_link` to `pagination`
* Changed single view first year of copyright to published year of post/page in `OpusPrimusStructures::copyright` method
* Deprecated `OpusPrimusDefaults` class (file may be removed in a future release)