@@ -46,6 +46,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added Contact Form 7 compatibility
 * Added BNS Login compatibility to use `dashicons` display
 * Added Gravity Forms compatibility (for reCaptcha form)
+* Added to `readme.txt` FAQ "I just updated to version 1.3, what could be causing these child-theme errors?"
 * Removed `works-in-progress` folder from theme
 * Updated `readme.txt` to note the use and license of SlickNav by Josh Cope
 * Updated `readme.txt` to note the use and license of FitVids by Chris Coyier and Paravel
